# tapreader

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  tap.cpp  tap.h  wav.h
src/: CMakeLists.txt  main.cpp  options.ggo
